[gd_scene load_steps=7 format=2]

[ext_resource path="res://themes/blue_theme.tres" type="Theme" id=1]
[ext_resource path="res://levels/CodingLevels/Levels/05-AssignmentOperators.gd" type="Script" id=2]
[ext_resource path="res://levels/CodingLevels/Levels/05-Codes.gd" type="Script" id=3]
[ext_resource path="res://themes/output_blue.tres" type="Theme" id=4]
[ext_resource path="res://levels/Blue/levels/BlueLevel01.tscn" type="PackedScene" id=5]
[ext_resource path="res://ui/Coding/InteractiveSession.tscn" type="PackedScene" id=6]

[node name="05-AssignmentOperators" type="Node2D"]
script = ExtResource( 2 )
coding_resources_object = ExtResource( 3 )
interactive_session_theme = ExtResource( 1 )
output_panel_theme = ExtResource( 4 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="InteractiveSession" parent="CanvasLayer" instance=ExtResource( 6 )]

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="BlueLevel01" parent="." instance=ExtResource( 5 )]
[connection signal="build" from="CanvasLayer/InteractiveSession" to="." method="_on_InteractiveSession_build"]
